tests/samples/valid/builtin_format_u128.pn

fn main() -> u8
{
	var x: u128 = 245897425987205987254872359832589484829;
	{
		print:
		print!(x, "\n");
		reduce:
		x = x / 10;
		check:
		if x == 0
			goto return;
		loop;
	}
	return: 0
}
