tests/samples/invalid/early_return.pn
fn main() -> i32
{
	var x = 33;

	if x == 33
	{
		return: 400;
	}

	return: 401
}
